--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,6 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
   - title: "재테크"
-    url: /재테크/
+    url: /investment/
   - title: "About"
     url: /about/
