--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
-  - title: "재테크"
-    url: /investment/
-  - title: "About"
-    url: /about/
+  # - title: "재테크"
+  #   url: /investment/
+  # - title: "About"
+  #   url: /about/
