--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -81,9 +81,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-4ZX7K10NVE" # Replace this with your ID, or delete
+    tracking_id          : "UA-2011187-3" # Replace this with your ID, or delete
     anonymize_ip         : true
 
 
