--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-4ZX7K10NVE"
+    tracking_id          : "G-BZRFCS60JE"
     anonymize_ip         : # true, false (default)
 
 
