--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,16 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "mistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "우리들의 모든 기록"
+locale                   : "ko-KR"
+title                    : "스벤 dev log"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "SVEN"
-description              : "An amazing website."
+description              : "개발/재테크 "
 # url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url                      : "https://sven-project.herokuapp.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
