--- a/_config.yml
+++ b/_config.yml
@@ -94,11 +94,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  name             : "스벤"
+  avatar           : "/assets/img/christin-hume-Hcfwew744z4-unsplash.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "**개발 및 재테크** 관련 포스팅"
+  location         : "Republic of Korea"
+  email            : "sven0906@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
